fix: correct typos, Dockerfile syntax errors, and add Examples content
- Fix ENTRYPOINT JSON array missing commas in slides.md and Dockerfile-jlink
- Fix 'cgoups' typo to 'cgroups'
- Update debian:buster-slim to debian:bookworm-slim (Buster EOL)
- Add Example 1: simple Java app with JRE Alpine vs jlink multi-stage build
- Add Example 2: APM monitoring stack with docker-compose